update scm info
git-svn-id: http://karma-server/svn/kw/maven-archetypes/opencms-module-demo-archetype/trunk@79 9196b746-ea0f-4ef2-a6b7-dc36619c20d1

--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
 	<inceptionYear>2014</inceptionYear>
 
 	<scm>
-		<connection></connection>
-		<developerConnection></developerConnection>
-		<url></url>
+		<connection>scm:svn:http://karmaware.mine.nu/svn/kw/maven-archetypes/opencms-module-demo-archetype/trunk</connection>
+		<developerConnection>scm:svn:http://karmaware.mine.nu/svn/kw/maven-archetypes/opencms-module-demo-archetype/trunk</developerConnection>
+		<url>http://karmaware.mine.nu/svn/kw/maven-archetypes/opencms-module-demo-archetype/trunk</url>
 	</scm>
-
+	
 	<ciManagement>
 		<system></system>
 		<url></url>
