--- a/src/main/resources/archetype-resources/src/main/manifest/module.properties
+++ b/src/main/resources/archetype-resources/src/main/manifest/module.properties
@@ -1,5 +1,5 @@
-manifest.info.creator=
-manifest.info.opencmsversion=8.0.4
+manifest.info.creator=com.kamomileware.maven.plugin.opencms:opencms-module-maven-plugin
+manifest.info.opencmsversion=${opencms.version}
 manifest.info.project=Offline
 manifest.info.exportversion=7
 
