--- a/src/main/resources/archetype-resources/src/main/resources/workplace.properties
+++ b/src/main/resources/archetype-resources/src/main/resources/workplace.properties
@@ -1,7 +1,7 @@
 # Module resources (ExplorerTypes)
 #############################################################################
 resource.type.initial = ${project.artifactId} contents
-resource.desc.initial = Module ${project.groupId}.${project.artifactId} contents definitions.
+resource.desc.initial = Module ${manifest.module.name} contents definitions.
 
 resource.type.base.article = Article
 resource.desc.base.article = Article web page.
