--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<artifactId>${artifactId}</artifactId>
 	<groupId>${groupId}</groupId>
 	<version>${version}</version>
 	<packaging>opencms-module</packaging>
-	
+
 	<name>OC Module</name>
 	<description>
 	Basic OpenCms Module project featuring:
@@ -16,13 +16,13 @@
 		- content files export
 		- file and folder properties definitions
 	</description>
-	
+
 	<scm>
 		<connection></connection>
 		<developerConnection></developerConnection>
 		<url></url>
 	</scm>
-	
+
 	<properties>
 		<resources.encoding>${resources-encoding}</resources.encoding>
 		<opencms.module.plugin.version>${module-plugin-version}</opencms.module.plugin.version>
@@ -34,15 +34,15 @@
 		<manifest.encoding>${resources.encoding}</manifest.encoding>
 		<module.descriptors.encoding>${resources.encoding}</module.descriptors.encoding>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.opencms</groupId>
 			<artifactId>opencms-core</artifactId>
-			<version>${opencms-version}}</version>
+			<version>${opencms-version}</version>
 			<scope>provided</scope>
 		</dependency>
-	
+
 		<!-- Test dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -51,7 +51,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<defaultGoal>package</defaultGoal>
 		<finalName>${project.artifactId}</finalName>
