--- a/pom.xml
+++ b/pom.xml
@@ -19,4 +19,10 @@
     <url>https://github.com/kamomileware/${project.artifactId}</url>
     <tag>develop</tag>
   </scm>
+  <distributionManagement>
+    <site>
+      <id>kamomileware.git.server</id>
+      <url>gitsite:git@kw.github.com/kamomileware/${project.artifactId}.git</url>
+    </site>
+  </distributionManagement>
 </project>
